--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   bloc: ^8.0.2
   dio: ^4.0.4
   rxdart: ^0.27.3
+  intl: ^0.17.0
   firebase_messaging: ^11.2.6
   firebase_core: ^1.12.0
 
